Bug 457664 - Show clearer messages on username changes
Summary: Show clearer messages on username changes
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-09 10:24 UTC by Jan Bidler
Modified: 2022-10-23 21:56 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Bidler 2022-08-09 10:24:00 UTC
SUMMARY
Currently, the username changes are a bit unclear and should get reworded.


STEPS TO REPRODUCE
1. Have "Alice" change their username from "Alice" to "Bob"

OBSERVED RESULT
The following message gets printed "**Bob** changed their username to Bob" with the name in **** being clickable / a mention 

EXPECTED RESULT
Something like the following message should get printed instead: "**Bob** changed their username from Alice to Bob".

SOFTWARE/OS VERSIONS
Linux: Arch Linux
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.5
NeoChat: self compiled flatpak
Comment 1 Bug Janitor Service 2022-10-23 13:57:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/571
Comment 2 Tobias Fella 2022-10-23 21:56:30 UTC
Git commit a9c80b90f65621a2b5b72d65ff2865c5c92be774 by Tobias Fella.
Committed on 23/10/2022 at 21:40.
Pushed by tfella into branch 'master'.

Show old display name for name change events

M  +1    -1    imports/NeoChat/Component/Timeline/StateDelegate.qml
M  +14   -0    src/messageeventmodel.cpp
M  +2    -1    src/messageeventmodel.h

https://invent.kde.org/network/neochat/commit/a9c80b90f65621a2b5b72d65ff2865c5c92be774