Show old display name for name change events

BUG: 457664